--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -2,7 +2,9 @@ ru:
   activerecord:
     attributes:
       product:
-        code: "Код"
+        code_1c: "Код 1C"
+      taxon:
+        code_1c: "Код 1C"
 
   one_c7_connector: "Коннектор с 1С 7.7"
   one_c7_connector_desc: "Импорт товаров из XML файлов 1C 7.7"
